--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -1,3 +1,21 @@
-<li>
-  <%= spot.user_name %> was <%= spot.text %>
-</li>
+<div class="timeline-block">
+  <div class="timeline-point success">
+    <img src="<%= asset_url('hyper_spot.png') %>" alt="">
+  </div>
+  <div class="timeline-content">
+    <div class="card full-width">
+      <div class="card-header">
+        <h5><%= local_time_ago(spot.created_at) %></h5>
+      </div>
+      <div class="card-description">
+        <%= link_to('@' + spot.user_name, spots_path(name: spot.user_name)) + ': ' + spot.text %>
+        <% spot.tags.each do |tag| %>
+          <%= link_to('#' + tag, spots_path(tag: tag)) %>
+        <% end %>
+        <div class="via">
+          via <%= spot.channel_name.capitalize if spot.channel_name %> On Slack
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
