Add autoprefixer for rails

--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -13,7 +13,7 @@
           <%= link_to('#' + tag, spots_path(tag: tag)) %>
         <% end %>
         <div class="via">
-          via <%= spot.channel_name.capitalize if spot.channel_name %> On Slack
+          via <%= spot.channel_name.capitalize %> On Slack
         </div>
       </div>
     </div>
