--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,5 +1,12 @@
 <div class="timeline-container center top-circle">
   <section class="timeline">
+    <% unless current_page?(root_path) %>
+      <div class="reset">
+        <%= link_to(root_path) do %>
+          <%= image_tag('load-icon.svg') %>
+        <% end %>
+      </div>
+    <% end %>
     <%= render partial: 'spots/spots', locals: {grouped_spots: @grouped_spots} %>
   </section>
 </div>
