--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -40,6 +40,11 @@
         margin-right: 10px;
         a {
             text-decoration: none;
+            &.active {
+              font-weight: bold;
+              border-bottom: 1px solid #fff;
+              padding-bottom: 3px;
+            }
         }
       }
     }
