--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,13 +11,19 @@
     <div class="filters">
       <%= content_tag :ul do %>
         <%= content_tag :li do %>
-          <%= link_to('All', root_path, class: "#{current_page?(root_path) ? 'active' : ''}") %>
+          <%= link_to('All', root_path,
+              class: "#{current_page?(root_path) ? 'active' : ''}")
+          %>
         <% end %>
         <%= content_tag :li do %>
-          <%= link_to('Remote', spots_path(tag: 'remote'), class: "#{current_page?(spots_path(tag: 'remote')) ? 'active' : ''}") %>
+          <%= link_to('Remote', spots_path(tag: 'remote'),
+            class: "#{current_page?(spots_path(tag: 'remote')) ? 'active' : ''}")
+          %>
         <% end %>
         <%= content_tag :li do %>
-          <%= link_to('Office', spots_path(tag: 'office'), class: "#{current_page?(spots_path(tag: 'office')) ? 'active' : ''}") %>
+          <%= link_to('Office', spots_path(tag: 'office'),
+              class: "#{current_page?(spots_path(tag: 'office')) ? 'active' : ''}")
+          %>
        <% end %>
       <% end %>
     </div>
