Use image tag instead of asset url

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid relative">
     <div class="logo">
       <div class="brand">
-        <img src="<%= asset_url('hyper_logo.svg') %>" alt="">
+        <%= image_tag('hyper_logo.svg') %>
       </div>
     </div>
     <div class="brand-description">
