--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -1,6 +1,6 @@
 <div class="timeline-block">
   <div class="timeline-point success">
-    <img src="<%= asset_url('hyper_spot.png') %>" alt="">
+    <%= image_tag('hyper_spot.png') %>
   </div>
   <div class="timeline-content">
     <div class="card full-width">
