--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -128,11 +128,6 @@
     clear: both;
   }
 }
-@media (max-width: 480px) {
-  .timeline-container{
-    width: 94%;
-  }
-}
 .timeline-container {
   &.center {
     .timeline {
@@ -171,6 +166,48 @@
               border-right-color: white;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 580px) {
+  .timeline {
+    &::before {
+      content: none;
+    }
+    .timespan {
+      &:first-of-type {
+        .span {
+          top: auto;
+        }
+      }
+      .span {
+        position: relative;
+        top: auto;
+        left: auto;
+        text-align: center;
+        background-color: #f57d2d;
+        margin-left: 0;
+        width: 100%;
+      }
+    }
+  }
+
+  .timeline-container{
+    width: 94%;
+    margin-top: 4em;
+    &.center {
+      .timeline {
+        margin-top: 2em;
+        .timeline-point {
+          left: 5%;
+          margin-left: -21px;
+        }
+        .timeline-content {
+          width: 85%;
+          float: right;
         }
       }
     }
