Break long words and urls

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -33,6 +33,8 @@
   .card-description {
     padding:5px 0;
     font-size: 24px;
+		white-space: initial;
+    word-wrap: break-word;
     margin: 0;
     p {
       margin-bottom: 4px;
