--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -5,7 +5,7 @@
 @import 'fonts';
 
 body {
-	background-image: asset-url('bg_hyper.jpg');
+	background-image: asset-url('hyper-team.jpg');
 	background-attachment: fixed;
 	background-repeat: no-repeat;
 	font-family: $base-font-family;
