Fix font rendering - use typekit

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -4,6 +4,9 @@
 
 @import 'fonts';
 
+html, body {
+  text-rendering: optimizeLegibility;
+}
 body {
 	background-image: asset-url('hyper-team.jpg');
 	background-attachment: fixed;
