Fix timespan position

--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -182,6 +182,7 @@
       top: 5px;
     }
     .timespan {
+      padding-top: 25px;
       &:first-of-type {
         .span {
           top: auto;
