Update the message to return url and id

--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -1,4 +1,4 @@
-<div class="timeline-block">
+<div class="timeline-block" id="spot-<%= spot.id %>">
   <div class="timeline-point success">
     <%= image_tag('hyper_spot.png') %>
   </div>
