--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -7,6 +7,8 @@
         <% end %>
       </div>
     <% end %>
-    <%= render partial: 'spots/spots', locals: {grouped_spots: @grouped_spots} %>
+    <% cache(['spots', Spot.count, Spot.maximum(:updated_at).try(:utc).try(:to_s, :number)]) do %>
+      <%= render partial: 'spots/spots', locals: {grouped_spots: @grouped_spots} %>
+    <% end %>
   </section>
 </div>
