--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -43,6 +43,7 @@
     	color: #f2f2f2;
     	text-decoration: none;
     	font-weight: bold;
+			color: #f57d2d;
     }
     .via {
       opacity: .45;
