--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,14 +1,20 @@
 <div class="timeline-container center top-circle">
-  <section class="timeline">
-    <% unless current_page?(root_path) %>
-      <div class="reset">
-        <%= link_to(root_path) do %>
-          <%= image_tag('load-icon.svg') %>
-        <% end %>
-      </div>
-    <% end %>
-    <% cache(['spots', Spot.count, Spot.maximum(:updated_at).try(:utc).try(:to_s, :number)]) do %>
-      <%= render partial: 'spots/spots', locals: {grouped_spots: @grouped_spots} %>
-    <% end %>
-  </section>
+  <% if @grouped_spots.length > 0 %>
+    <section class="timeline">
+      <% unless current_page?(root_path) %>
+        <div class="reset">
+          <%= link_to(root_path) do %>
+            <%= image_tag('load-icon.svg') %>
+          <% end %>
+        </div>
+      <% end %>
+      <% cache(['spots', Spot.count, Spot.maximum(:updated_at).try(:utc).try(:to_s, :number), params[:name], params[:tag]]) do %>
+        <%= render partial: 'spots/spots', locals: {grouped_spots: @grouped_spots} %>
+      <% end %>
+    </section>
+  <% else %>
+    <div class="no-content">
+      <h3>No spots</h3>
+    </div>
+  <% end %>
 </div>
