--- a/app/views/spots/_spots.html.erb
+++ b/app/views/spots/_spots.html.erb
@@ -3,7 +3,7 @@
     <div class="span">
       <h3><%=  local_relative_time(date, 'weekday') %></h3>
     </div>
-    <% cache(@spot) do %>
+    <% cache([@spot, params[:name], params[:tag]]) do %>
       <%= render partial: 'spots/spot', collection: spots %>
     <% end %>
   </div>
