Highlight active status

--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -66,6 +66,10 @@
       }
     }
   }
+  :target {
+    background: rgba(255, 255, 255, 0.2);
+    padding: 20px 0;
+  }
 }
 @media only screen and (min-width: 1170px) {
   .timeline-container:not(.left) {
