Fix font weight

--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -35,14 +35,11 @@
 		white-space: initial;
     word-wrap: break-word;
     margin: 0;
-    p {
-      margin-bottom: 4px;
-      margin-top: 5px;
-    }
+		font-weight: 500;
     a {
     	color: #f2f2f2;
     	text-decoration: none;
-    	font-weight: bold;
+    	font-weight: 600;
 			color: #f57d2d;
     }
     .via {
