--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -68,7 +68,7 @@
   }
   :target {
     background: rgba(255, 255, 255, 0.2);
-    padding: 20px 0;
+    padding: 10px;
   }
 }
 @media only screen and (min-width: 1170px) {
