Change to css solution for top margin

--- a/app/assets/stylesheets/timeline.scss
+++ b/app/assets/stylesheets/timeline.scss
@@ -70,6 +70,13 @@
     background: rgba(0, 0, 0, 0.2);
     padding: 10px;
   }
+  *[id]:before {
+    display: block;
+    content: " ";
+    margin-top: -75px;
+    height: 75px;
+    visibility: hidden;
+  }
 }
 @media only screen and (min-width: 1170px) {
   .timeline-container:not(.left) {
