--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Spot Hyper - Share where you are via Slack</title>
-    <meta name="description" content="Share where you are and what you working on with team via slack">
+    <title>Spot Hyper</title>
+    <meta name="description" content="Share where you are and what you are working on">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= favicon_link_tag 'favicon.ico' %>
