--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     </div>
     <div class="brand-description">
-      <h3>Share where you are and what you working on with team via Slack</h3>
+      <h3>Share where you are and what you are working on</h3>
     </div>
     <div class="filters">
       <%= content_tag :ul do %>
