--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -12,7 +12,7 @@
       <div class="card-description">
         <%= link_to('@' + spot.user_name, spots_path(name: spot.user_name)) + ': ' + render_with_hashtags(spot.text).html_safe %>
         <div class="via">
-          via <%= spot.channel_name.capitalize %> On Slack
+          via <%= spot.channel_name.capitalize if spot.channel_name %> On Slack
         </div>
       </div>
     </div>
