--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -8,9 +8,6 @@ html, body {
   text-rendering: optimizeLegibility;
 }
 body {
-	background-image: asset-url('hyper-team.jpg');
-	background-attachment: fixed;
-	background-repeat: no-repeat;
 	font-family: $base-font-family;
 	line-height: 1.2;
 	font-weight: 400;
@@ -21,17 +18,40 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	font-style: normal;
 	white-space: normal;
-	background-size: cover;
-	&:before {
-		content: '';
-		background: rgba(68, 68, 68, 0.7) top right no-repeat;
+  &:before {
+  	content: '';
+  	background: rgba(68, 68, 68, 0.7) top right no-repeat;
     position: fixed;
     width: 100%;
     height: 100%;
+    will-change: transform;
+    width: 100%; height: 100%;
+    object-fit: cover;
     top: 0;
     bottom: 0;
-    background-attachment: fixed;
-	}
+  }
+}
+video#bgvideo {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  will-change: transform;
+  width: 100%; height: 100%;
+  object-fit: cover;
+  z-index: -100;
+  -ms-transform: translateX(-50%) translateY(-50%);
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-image: asset-url('hyper-team.jpg');
+  background-size: cover;
+}
+@media (max-width: 800px) {
+  video#bgvideo {
+    display: none;
+  }
 }
 @media (max-width: 620px) {
 	body {
