--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <video id="bgvideo" loop="true" autoplay="true">
+    <video id="bgvideo" loop="true" autoplay="true" muted>
       <source src="https://s3-eu-west-1.amazonaws.com/hyper-production/videos/loop_v01_darker.mp4" type="video/mp4">
       <source src="https://s3-eu-west-1.amazonaws.com/hyper-production/videos/loop_v01_darker.ogv" type="video/ogg">
       <source src="https://s3-eu-west-1.amazonaws.com/hyper-production/videos/loop_v01_darker.webm" type="video/webm">
