--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -4,17 +4,20 @@
 
 .header{
   position: relative;
-  display: block;
   height: 60px;
   width: 100%;
   padding: 20px 0;
   z-index: 800;
+  .container-fluid {
+    flex-wrap: wrap;
+    display: flex;
+  }
   a {
     color: #fff;
   }
   .logo {
-    width: 35%;
-    float: left;
+    flex: 1 0 33.333%;
+    box-sizing: border-box;
   }
   .brand {
     max-width: 120px;
@@ -22,9 +25,10 @@
   }
 
   .brand-description {
-    max-width: 50%;
-    float: left;
+    flex: 1 0 33.333%;
+    box-sizing: border-box;
     padding-top: 10px;
+    text-align: center;
     h3 {
       color: #fff;
       font-size: 13px;
@@ -32,8 +36,10 @@
     }
   }
   .filters {
-    float: right;
     padding-top: 10px;
+    flex: 1 0 33.333%;
+    box-sizing: border-box;
+    text-align: right;
     ul {
       li {
         display: inline-block;
@@ -50,60 +56,24 @@
     }
   }
 
-  @media (max-width: 2000px) {
-    .logo {
-      width: 40%;
-    }
-  }
-
-  @media (max-width: 1500px) {
-    .logo {
-      width: 37%;
-    }
-  }
-
-  @media (max-width: 1300px) {
-    .logo {
-      width: 35%;
-    }
-  }
-
   @media (max-width: 800px) {
     .logo {
-      width: 20%;
-      float: left;
-    }
-    .brand-description {
-      max-width: 40%;
-      float: left;
-      padding-top: 10px;
-      text-align: center;
-    }
-    .filters {
-      float: none;
-      padding-top: 10px;
-      text-align: right;
+      flex: 1 0 20%;
     }
   }
   @media (max-width: 620px) {
     .logo {
-      width: 30%;
-      float: none;
-      margin: 0 auto;
+      flex: 1 0 100%;
+      .brand {
+        margin: 0 auto;
+      }
     }
     .brand-description {
-      max-width: 80%;
-      float: none;
-      margin: 0 auto;
-      padding-top: 10px;
-      clear: both;
+      flex: 1 0 100%;
       text-align: center;
     }
     .filters {
-      float: none;
-      margin-top: 20px;
-      clear: both;
-      display: block;
+      flex: 1 0 100%;
       text-align: center;
     }
   }
