--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -3,3 +3,50 @@
 */
 
 $base-font-family: "proxima-nova", sans-serif;
+
+@charset "UTF-8";
+
+@font-face {
+  font-family: "sh";
+  src:asset-url("sh.eot");
+  src:url("sh.eot?#iefix") format("embedded-opentype"),
+   asset-url("sh.woff") format("woff"),
+   asset-url("sh.ttf") format("truetype"),
+   asset-url("sh.svg#sh") format("svg");
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+[data-icon]:before {
+  font-family: "sh" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "sh" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-star:before {
+  content: "\62";
+}
+.icon-star-o:before {
+  content: "\61";
+}
