--- a/app/views/spots/_spot.html.erb
+++ b/app/views/spots/_spot.html.erb
@@ -15,6 +15,9 @@
           via <%= spot.channel_name.capitalize if spot.channel_name %> On Slack
         </div>
       </div>
+      <div class="votes">
+        <%= render partial: 'votes/votes', locals: { spot: spot } %>
+      </div>
     </div>
   </div>
 </div>
