Use ip instead of remote_ip

--- a/app/views/votes/_votes.html.erb
+++ b/app/views/votes/_votes.html.erb
@@ -1,5 +1,5 @@
 <div id="spot-votes-<%= spot.id %>">
-  <% if spot.voted?(request.remote_ip) %>
+  <% if spot.voted?(request.ip) %>
     <%= render partial: 'votes/voted', locals: { spot: spot } %>
   <% else %>
     <%= render partial: 'votes/vote', locals: { spot: spot } %>
