Debug ip on heroku

--- a/app/views/votes/_votes.html.erb
+++ b/app/views/votes/_votes.html.erb
@@ -1,3 +1,4 @@
+<%= request.ip %>
 <div id="spot-votes-<%= spot.id %>">
   <% if spot.voted?(request.ip) %>
     <%= render partial: 'votes/voted', locals: { spot: spot } %>
