--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -44,9 +44,9 @@ $base-font-family: "proxima-nova", sans-serif;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-star:before {
-  content: "\62";
-}
-.icon-star-o:before {
+.icon-good4:before {
   content: "\61";
+}
+.icon-smiling36:before {
+  content: "\62";
 }
