--- a/app/views/votes/_voted.html.erb
+++ b/app/views/votes/_voted.html.erb
@@ -1,6 +1,8 @@
 <%= link_to(spot_votes_path(spot), remote: true, method: :post) do %>
   <span class="vote voted">
-    <i class="icon-star-o"></i>
-    <%= spot.votes_count %>
+    <i class="icon-good4"></i>
+    <span class="count">
+      <%= spot.votes_count %>
+    </span>
   </span>
 <% end %>
