Change the description

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,5 +1,5 @@
 <% @description = capture do %>
-  Spot team members and what they are on today
+  Spot what team members are working on today
 <% end %>
 <div class="timeline-container center">
   <% if @grouped_spots.length > 0 %>
