--- a/app/assets/stylesheets/hangouts.scss
+++ b/app/assets/stylesheets/hangouts.scss
@@ -10,15 +10,14 @@
   width: 50%;
   margin: 50px auto;
   position: relative;
-  min-height: 300px;
+  min-height: 400px;
   &::after {
     content: '';
     display: table;
     clear: both;
   }
   .card {
-    border-bottom: 1px solid #fff;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
     &:last-of-type {
       border-bottom: 0;
     }
@@ -29,6 +28,7 @@
         background: #fff;
         padding: 5px 10px;
         float: right;
+        font-size: 20px;
       }
     }
     h5 {
