--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -3,11 +3,15 @@
 */
 
 .header{
-  position: relative;
-  height: 60px;
+  position: fixed;
   width: 100%;
-  padding: 20px 0;
+  padding: 10px 0;
   z-index: 800;
+  top: 0;
+  transition: background-color 0.5s ease;
+  &.scrolling {
+    background-color: rgba(68,68,68,0.7);
+  }
   .container-fluid {
     flex-wrap: wrap;
     display: flex;
