--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -77,6 +77,7 @@ video#bgvideo {
 .container {
   max-width: 1170px;
   margin: 0 auto;
+  padding-top: 100px;
 }
 .container-fluid {
 	padding-left: 30px;
